--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^4.0.0",
     "codemirror": "^5.25.0",
     "core-js": "^2.4.1",
+    "highlightjs": "^9.10.0",
     "markdown-it": "^8.3.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
