--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "autosize": "^3.0.20",
     "codemirror": "^5.25.0",
     "core-js": "^2.4.1",
     "highlightjs": "^9.10.0",
