--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "autosize": "^3.0.20",
+    "bootstrap": "^3.3.7",
     "codemirror": "^5.25.0",
     "core-js": "^2.4.1",
     "highlightjs": "^9.10.0",
