--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "codemirror": "^5.25.0",
     "core-js": "^2.4.1",
     "highlightjs": "^9.10.0",
+    "jquery": "^3.2.1",
     "markdown-it": "^8.3.1",
     "material-design-icons": "^3.0.1",
     "rxjs": "^5.1.0",
